# rust-sgx-benchmark

./: .gitignore  Readme.md  test_all.sh
.cargo/: config
c-linux-bench/: fasta.gcc-5.c  mandelbrot.gcc-2.c  nbody.c  test_perf.sh
c-linux-benchmarks/: fannkuchredux.gcc-5.c  fasta.gcc-5.c  mandelbrot.gcc-2.c  spectralnorm.gcc-3.c
c-sgx-bench/: create_perf.sh  destroy_perf.sh  test_perf.sh
c-sgx-bench/create_enclave/: Makefile
c-sgx-bench/create_enclave/App/: App.cpp
c-sgx-bench/destroy_enclave/App/: App.cpp
c-sgx-bench/destroy_enclave/Enclave/: Enclave.config.xml  Enclave.edl
c-sgx-bench/fann/Enclave/: uniform.c
c-sgx-bench/fasta/: Makefile  app
c-sgx-bench/fasta/Enclave/: .fasta.c.swp  fasta.c
c-sgx-bench/localattestation/: Makefile
c-sgx-bench/mandelbrot/App/: App.cpp
c-sgx-bench/mandelbrot/Enclave/: Enclave.edl  uniform.c
c-sgx-bench/nbody/Enclave/: nbody.c
c-sgx-bench/sgx_apis/: Makefile
c-sgx-bench/sgx_apis/App/: App.cpp
c-sgx-bench/sgx_apis/Enclave/: Enclave.edl  uniform.c
c-sgx-bench/sgx_apis/Include/: user_types.h
c-sgx-bench/spectum/App/: App.cpp
c-sgx-bench/spectum/Enclave/: Enclave.edl  (+1 more)
c-sgx-bench/thread/: Makefile
c-sgx-benchmarks/: test_perf.sh
c-sgx-benchmarks/mandelbrot/: Makefile
c-sgx-benchmarks/nbody/: Makefile
c-sgx-benchmarks/spectum/: Makefile
c-sgx-benchmarks/switchless/: Makefile
fann/enclave/: .Enclave.config.xml.swp  Cargo.toml
fasta/: Makefile
fasta/app/: app.c
fortanix-sgx-bench/: fann  fasta  mandelbrot  nbody  spectum  test_perf.sh
localattestation/app/: App.cpp
mesalock-sgx-bench/: create_perf.sh  destroy_perf.sh  test_perf.sh
mesalock-sgx-bench/create_enclave/: Makefile
mesalock-sgx-bench/fann/: Makefile
mesalock-sgx-bench/localattestation/: Makefile
mesalock-sgx-bench/localattestation/attestation/: Cargo.toml  Xargo.toml
mesalock-sgx-bench/localattestation/enclave3/: Cargo.toml  Makefile
mesalock-sgx-bench/mandelbrot/: Makefile
mesalock-sgx-bench/nbody/: perf.data.old
mesalock-sgx-bench/sgx_apis/: Makefile
mesalock-sgx-bench/sgx_apis/enclave/: Cargo.toml  Enclave.edl
mesalock-sgx-bench/sgx_apis/enclave/src/: lib.rs
mesalock-sgx-bench/spectum/: Makefile
mesalock-sgx-bench/switchless/: Makefile
mesalock-sgx-bench/switchless/enclave/: Cargo.toml  Makefile
mesalock-sgx-bench/thread/: Makefile
nbody/app/: app.c
rust-linux/: results.txt  test_perf.sh
rust-linux/fann/: Cargo.toml  results.txt
rust-linux/fasta/: Cargo.toml
rust-linux/mandelbrot/: Cargo.toml
rust-linux/nbody/: Cargo.toml
rust-linux/spectum/: Cargo.toml
spectum/enclave/: Cargo.toml  Enclave.edl
switchless/enclave/: Cargo.toml
thread/: Makefile
thread/enclave/: Cargo.toml
thread/enclave/src/: .lib.rs.swp
(+72 files in other folders)
