[package]
name = "Switchlessenclave"
version = "1.0.0"
authors = ["Baidu"]


[profile.release]
incremental = false
lto = true

[lib]
name = "switchlessenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_tstd = { path = "../../../sgx_tstd" }
