[package]
name = "attestation"
version = "1.0.0"
authors = ["Baidu"]

[features]
default = []
use_std = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../rust-sgx-sdk/sgx_types" }
sgx_trts = { path = "../../../rust-sgx-sdk/sgx_trts" }
sgx_tstd = { path = "../../../rust-sgx-sdk/sgx_tstd" }
sgx_tdh = { path = "../../../rust-sgx-sdk/sgx_tdh" }
