[package]
name = "enclave3"
version = "1.0.0"
authors = ["Baidu"]


[profile.release]
incremental = false
lto = true

[lib]
name = "enclave3"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../sgx_types" }

[dependencies]
attestation = {path = "../attestation/"}
