[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../rust-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../../../rust-sgx-sdk/sgx_tstd" }
sgx_tse = { path = "../../../rust-sgx-sdk/sgx_tse" }
sgx_rand = { path = "../../../rust-sgx-sdk/sgx_rand" }
sgx_tseal = { path = "../../../rust-sgx-sdk/sgx_tseal" }
sgx_tprotected_fs = { path = "../../../rust-sgx-sdk/sgx_tprotected_fs" }
